--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_STAGING=mongodb+srv://ifes:ifes123456@clusterifes.qtry8hw.mongodb.net/academia?retryWrites=true&w=majority
+JWT_SECRET=QW5kcsOpIENvcnJlaWE=
